--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint" : "eslint src/. --config .eslintrc.json --ext .ts --fix"
+    "lint": "eslint src/. --config .eslintrc.json --ext .ts --fix",
+    "alice": "ts-node demo/alice.ts",
+    "bob": "ts-node demo/bob.ts"
   },
   "dependencies": {
-    "@credo-ts/core": "0.5.3",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
     "@credo-ts/askar": "^0.5.3",
+    "@credo-ts/core": "0.5.3",
     "@credo-ts/node": "^0.5.3",
-    "@hyperledger/aries-askar-nodejs": "^0.2.1"
+    "@hyperledger/aries-askar-nodejs": "^0.2.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.39.0",
@@ -31,7 +33,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-security": "1.5.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "typescript": "4.8.4",
-    "prettier" : "2.8.7"
+    "prettier": "2.8.7",
+    "ts-node": "^10.9.2",
+    "typescript": "4.8.4"
   }
 }
